# Task-2.1.b--Secure_Slicing-Xapp

./: Dockerfile  README.md  config-file.json  datacollection.py  iperfplot.py  iperfresultsplot.py  multi_ue.grc  multi_ue.py  run_tests.sh  ss-xapp-onboard.url  test.py  zmqoneue.sh  zmqthreeue.sh  zmqtwoue.sh
.github/workflows/: pages.yml  test.yml
docs/: SS-instructions.md  SS-instructions.rst
docs/source/: index.rst
etc/: config-file.json
include/: nexran.h
lib/e2ap/src/: e2ap.cc
lib/e2sm/include/: e2sm.h  e2sm_nexran.h  e2sm_zylinium.h
lib/e2sm/src/: e2sm_zylinium.cc
scripts/: kill_stuff.sh  setup_env.sh
src/: CMakeLists.txt  nexran.cc  nexran_test#2.cc  nexran_test.cc  nodeb.cc  restserver.cc  run_tests.sh
src/testing/: nexran_test.cc
testing/: CMakeLists.txt  mod.cc  mod.h  nexran_test.cc  second_test.cc
testing/src/: buildinfo.cc
